[package]
name = "codecrafters-sqlite"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.86"                                # error handling
bytes = "1.7.1"                                  # helps manage buffers
#thiserror = "1.0.38"                             # error handling
